css sucks fix spacing of posts

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,15 @@
+$redditPostWidth: 330px;
+
 body {
   background-image: url("../assets/bg.jpg");
   margin: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
 a {
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 #titleLogo {
   background-image: url("../assets/header_bg.svg");
@@ -15,7 +19,8 @@ a {
   text-align: center;
   display: flex;
   justify-content: center;
-  height: 80px; }
+  height: 80px;
+}
 
 #navbar {
   background-color: #3a3a3c;
@@ -23,26 +28,31 @@ a {
   height: 50px;
   display: flex;
   justify-content: center;
-  z-index: 9998; }
+  z-index: 9998;
+}
 
 button:focus {
-  outline: 0; }
+  outline: 0;
+}
 
 button {
   background: none;
   border: none;
   color: #818285;
-  font-size: 14pt; }
+  font-size: 14pt;
+}
 
 button:hover {
-  color: tomato; }
+  color: tomato;
+}
 
 #postArea {
   display: flex;
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
-  width: 900px; }
+  width: 900px;
+}
 
 .redditPosts {
   background-color: White;
@@ -50,50 +60,62 @@ button:hover {
   width: 330px;
   height: 415px;
   border: 7px solid white;
-  padding: 20px; }
+  padding: 20px;
+}
 
 .redditPosts:hover {
-  border: 7px solid orange; }
+  border: 7px solid orange;
+}
 
 .picBox {
   height: 320px;
-  width: 330px; }
+  width: $redditPostWidth;
+}
 
 .redditPosts img {
-  width: 330px;
-  height: 300px; }
+  width: $redditPostWidth;
+  height: 300px;
+}
 
 #titleBox {
   display: flex;
-  width: 330px;
+  width: $redditPostWidth;
   height: 100px;
-  width: 330px; }
-
+  width: $redditPostWidth;
+}
 .title {
   text-align: left;
   font-size: 20px;
+  // text-overflow: ellipsis;
   overflow: hidden;
-  width: 330px;
-  height: 75px; }
+  // white-space: nowrap;
+  width: $redditPostWidth;
+  height: 75px;
+}
 
 #votes {
   bottom: 0;
-  display: flex; }
+  display: flex;
+}
 
 #info {
   display: flex;
-  width: 330px;
+  width: $redditPostWidth;
   font-size: 10px;
-  color: #808080; }
+  color: #808080;
+}
 
 .subreddit {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .author::before {
-  content: "from u/"; }
+  content: "from u/";
+}
 
 .author {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 #footer {
   position: fixed;
@@ -103,14 +125,19 @@ button:hover {
   background-color: #3a3a3c;
   text-align: center;
   height: 50px;
-  z-index: 9999; }
+  z-index: 9999;
+}
 
 #footer img:hover:nth-child(1) {
-  content: url("../assets/facebook_orange.svg"); }
+  content: url("../assets/facebook_orange.svg");
+}
 
 #footer img:hover:nth-child(2) {
-  content: url("../assets/instagram_orange.svg"); }
+  content: url("../assets/instagram_orange.svg");
+}
 
 @media only screen and (max-width: 600px) {
   #postArea {
-    width: 350px; } }
+    width: 350px;
+  }
+}
